# CTemplate

./: CMakeLists.txt  README.rst
include/CTemplate/: Template.h
src/: CMakeLists.txt  Template.c
test/unit/: BasicTests.cpp  CMakeLists.txt
tools/: build.sh
